<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.craftcitizen</groupId>
  <artifactId>imagemaps</artifactId>
  <version>1.1.0</version>
  <name>ImageMaps</name>
  <description>Render Images onto maps!</description>

  <pluginRepositories>
    <pluginRepository>
      <id>bytecode.space</id>
      <url>https://repo.bytecode.space/repository/maven-public/</url>
    </pluginRepository>
  </pluginRepositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
  </properties>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>dmulloy2-repo</id>
      <url>https://repo.dmulloy2.net/repository/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>ca.bkaw</groupId>
      <artifactId>paper-nms</artifactId>
      <version>1.20.6-SNAPSHOT</version>
      <scope>provided</scope>
  </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.14.0</version>
    </dependency>
    <dependency>
      <groupId>com.comphenix.protocol</groupId>
      <artifactId>ProtocolLib</artifactId>
      <version>5.2.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <finalName>${project.name}</finalName>
    <plugins>
      <plugin>
        <groupId>ca.bkaw</groupId>
        <artifactId>paper-nms-maven-plugin</artifactId>
        <version>1.4.4</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
            <archive>
                <manifestEntries>
                    <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                </manifestEntries>
            </archive>
        </configuration>
    </plugin>
    </plugins>
  </build>
</project>